Start to implement digest content page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 		<div class="page">
 			<div th:replace="~{header :: banner}"></div>
 			<div th:replace="~{pager :: paginator}"></div>
-			<div class="data"></div>
+			<div th:replace="~{content :: digest}"></div>
 			<div th:replace="~{pager :: paginator}"></div>
 			<div th:replace="~{footer :: copyright}"></div>
 		</div>
