Implement digest model and other

--- a/src/main/resources/templates/content.html
+++ b/src/main/resources/templates/content.html
@@ -2,8 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 	<body>
 		<div class="page">
+			<!--/*@thymesVar id="posts" type="ru.exlmoto.digest.site.model.DigestModel"*/-->
 			<div th:fragment="digest" class="digest">
-				<div class="title" th:utext="#{site.content.title}"></div>
+				<div class="title">
+					<span th:utext="${posts.title}"></span>
+					<span class="span-right" th:with="id=#{site.content.title.chat.id}" th:text="${#strings.replace(id, '%id%', posts.chatId)}"></span>,
+					<span class="span-right" th:utext="${posts.chatLink}" ></span>
+				</div>
 			</div>
 		</div>
 	</body>
