--- a/src/main/resources/templates/content.html
+++ b/src/main/resources/templates/content.html
@@ -3,11 +3,32 @@
 	<body>
 		<div class="page">
 			<!--/*@thymesVar id="posts" type="ru.exlmoto.digest.site.model.DigestModel"*/-->
-			<div th:fragment="digest" class="digest">
-				<div class="table-header">
-					<img class="table-header-image" src="../static/image/thread.png" th:src="@{/image/thread.png}" alt="Go!" th:alt="#{site.content.head.icon.title}" title="Go!" th:title="#{site.content.head.icon.title}" width="15" height="14"/><span class="table-header-title" th:utext="${posts.title}"></span><span class="table-header-description" th:utext="${posts.description}" ></span>
-				</div>
+			<div th:if="${!posts.digests.isEmpty()}" th:fragment="digest" class="digest">
+				<span class="table-header"><img class="table-header-image" src="../static/image/thread.png" th:src="@{/image/thread.png}" alt="Go!" th:alt="#{site.content.head.icon.title}" title="Go!" th:title="#{site.content.head.icon.title}" width="15" height="14"/><span class="table-header-title" th:utext="${posts.title}"></span><span class="table-header-description" th:utext="${posts.description}" ></span></span>
+				<table class="digest-post" th:each="digest : ${posts.digests}">
+					<tr>
+						<td class="cell-name">
+							<span class="username" th:text="${digest.username}"></span>
+						</td>
+						<td class="cell-details">
+							<span class="date-details"><img class="digest-icon" src="../static/image/post.png" th:src="@{/image/post.png}" alt="Post"/><span th:text="${digest.date}">Date</span></span><span class="number-details" th:text="'Message ID: ' + ${digest.id}"></span>
+						</td>
+					</tr>
+					<tr>
+						<td class="cell-avatar" rowspan="2">
+							<span class="user-details"><img th:if="${digest.avatar != null}" width="128" height="128" alt="Not Available" th:alt="#{site.content.avatar.general.alt}" src="../static/image/avatar.png" th:src="${digest.avatar}"/><img th:unless="${digest.avatar != null}" width="128" height="128" alt="Default Avatar" th:alt="#{site.content.avatar.default.alt}" src="../static/image/avatar.png" th:src="@{/image/avatar.png}"/><br/><br/><span th:text="${digest.group}"></span></span>
+						</td>
+						<td class="cell-digest">
+							<div class="digest-content" th:text="${digest.post}"></div>
+						</td>
+					</tr>
+					<tr></tr>
+					<tr>
+						<td class="divider" colspan="2"></td>
+					</tr>
+				</table>
 			</div>
+			<h3 th:unless="${!posts.digests.isEmpty()}" th:text="#{site.content.empty}">No matching records found in the database.</h3>
 		</div>
 	</body>
 </html>
