Add username filter

--- a/src/main/resources/static/style/motofan.css
+++ b/src/main/resources/static/style/motofan.css
@@ -218,6 +218,12 @@ input, textarea, select {
 	background: #E6AD00;
 	height: 5px;
 }
+.member-moderator {
+	color: blue;
+}
+.member-administrator {
+	color: red;
+}
 
 /* Footer */
 .copyright {
