--- a/src/main/resources/templates/content.html
+++ b/src/main/resources/templates/content.html
@@ -20,7 +20,7 @@
 								<span class="user-details"><img th:if="${digest.avatar != null}" width="128" height="128" alt="Not Available" th:alt="#{site.content.avatar.general.alt}" src="../static/image/avatar.png" th:src="${digest.avatar}" th:title="${digest.username}"/><img th:unless="${digest.avatar != null}" width="128" height="128" alt="Default Avatar" th:alt="#{site.content.avatar.default.alt}" src="../static/image/avatar.png" th:src="@{/image/avatar.png}" th:title="${digest.username}"/><br/><br/><span th:text="${digest.group}"></span></span>
 							</td>
 							<td class="cell-digest">
-								<div class="digest-content" th:text="${digest.post_html}"></div>
+								<div class="digest-content" th:utext="${digest.post_html}"></div>
 							</td>
 						</tr>
 						<tr></tr>
