Add description filter

--- a/src/main/resources/templates/content.html
+++ b/src/main/resources/templates/content.html
@@ -12,7 +12,7 @@
 								<span class="username" th:utext="${digest.username_html}"></span>
 							</td>
 							<td class="cell-details">
-								<span class="date-details"><img class="digest-icon" src="../static/image/post.png" th:src="@{/image/post.png}" alt="Post"/><span th:text="${digest.date}">Date</span></span><span class="number-details" th:text="'Message ID: ' + ${digest.description_html}"></span>
+								<span class="date-details"><img class="digest-icon" src="../static/image/post.png" th:src="@{/image/post.png}" alt="Post"/><span th:text="${digest.date}">Date</span></span><span class="number-details" th:utext="${digest.description_html}"></span>
 							</td>
 						</tr>
 						<tr>
