Add Reset button to search form

--- a/src/main/resources/static/style/motofan.css
+++ b/src/main/resources/static/style/motofan.css
@@ -112,6 +112,7 @@ input, textarea, select {
 	background: #FFEFD4;
 }
 .search-form {
+	display: flex;
 	margin-left: auto;
 }
 .page-link, .page-link-active {
