Highlight search text

--- a/src/main/resources/static/style/motofan.css
+++ b/src/main/resources/static/style/motofan.css
@@ -171,6 +171,14 @@ input, textarea, select {
 .digest-post-highlight {
 	border: 2px dashed orangered;
 }
+.text-highlight {
+	font-weight: bold;
+	color: red;
+	background: yellow;
+	border: 1px dashed #222;
+	padding: 1px;
+	margin: 1px;
+}
 .cell-name {
 	background: #FFEFD4;
 	border-right: 1px solid white;
