--- a/src/main/resources/templates/content.html
+++ b/src/main/resources/templates/content.html
@@ -16,14 +16,13 @@
 							</td>
 						</tr>
 						<tr>
-							<td class="cell-avatar" rowspan="2">
+							<td class="cell-avatar">
 								<span class="user-details"><img th:if="${digest.avatar != null}" width="128" height="128" alt="Not Available" th:alt="#{site.content.avatar.general.alt}" src="../static/image/avatar.png" th:src="${digest.avatar}" th:title="${digest.username}"/><img th:unless="${digest.avatar != null}" width="128" height="128" alt="Default Avatar" th:alt="#{site.content.avatar.default.alt}" src="../static/image/avatar.png" th:src="@{/image/avatar.png}" th:title="${digest.username}"/><br/><br/><span th:text="${digest.group}">Some group</span><br/><span th:with="data=#{site.content.user.id}" th:text="${#strings.replace(data, '%id%', digest.user_id)}">User #</span><br/><span th:utext="${digest.digests_html}">Digests</span></span>
 							</td>
 							<td class="cell-digest">
 								<div class="digest-content" th:utext="${digest.post_html}"></div>
 							</td>
 						</tr>
-						<tr></tr>
 						<tr>
 							<td class="divider" colspan="2"></td>
 						</tr>
