--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -6,22 +6,22 @@
 				<tr>
 					<td class="td-logo" id="td-logo-chunk-1" rowspan="3">
 						<a th:title="#{site.header.logo.tooltip}" th:href="${@environment.getProperty('site.address')}">
-							<img class="logo" id="img-logo-chunk-1" src="../static/image/header1.png" th:src="@{/image/header1.png}" alt="Logo chunk #1"/>
+							<img class="logo" id="img-logo-chunk-1" src="../static/image/header1.png" th:src="@{/image/header1.png}" alt=""/>
 						</a>
 					</td>
 					<td class="td-logo" id="td-logo-chunk-2" rowspan="3">
 						<a th:title="#{site.header.logo.tooltip}" th:href="${@environment.getProperty('site.address')}">
-							<img class="logo" id="img-logo-chunk-2" src="../static/image/header2.png" th:src="@{/image/header2.png}" alt="Logo chunk #2"/>
+							<img class="logo" id="img-logo-chunk-2" src="../static/image/header2.png" th:src="@{/image/header2.png}" alt=""/>
 						</a>
 					</td>
 					<td class="td-logo" id="td-logo-chunk-3">
-						<img class="logo" id="img-logo-chunk-3" src="../static/image/header3.png" th:src="@{/image/header3.png}" alt="Logo chunk #3"/>
+						<img class="logo" id="img-logo-chunk-3" src="../static/image/header3.png" th:src="@{/image/header3.png}" alt=""/>
 					</td>
 					<td class="td-logo" id="td-logo-chunk-4">
-						<img class="logo" id="img-logo-chunk-4" src="../static/image/header4.png" th:src="@{/image/header4.png}" alt="Logo chunk #4"/>
+						<img class="logo" id="img-logo-chunk-4" src="../static/image/header4.png" th:src="@{/image/header4.png}" alt=""/>
 					</td>
 					<td class="td-logo" id="td-logo-chunk-5">
-						<img class="logo" id="img-logo-chunk-5" src="../static/image/header5.png" th:src="@{/image/header5.png}" alt="Logo chunk #5"/>
+						<img class="logo" id="img-logo-chunk-5" src="../static/image/header5.png" th:src="@{/image/header5.png}" alt=""/>
 					</td>
 				</tr>
 				<tr>
