--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 	<body>
 		<div class="page">
+			<div class="controls">
 			<!--/*@thymesVar id="find" type="ru.exlmoto.digest.site.form.SearchForm"
 			*/--><div th:fragment="search-form(side)" class="search-form"><!--/*
 				*/--><form action="#" th:action="@{/search}" th:object="${find}" method="get"><!--/*
@@ -15,6 +16,7 @@
 					*/--><input class="button" id="button-reset" type="submit" value="Reset" th:value="#{site.search.reset}"/><!--/*
 				*/--></form><!--/*
 			*/--></div>
+			</div>
 		</div>
 	</body>
 </html>
