--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -5,7 +5,7 @@
 			<div th:fragment="copyright" class="copyright">
 				<div th:utext="#{site.footer.language}">Language: Russian | English.</div>
 				<div th:utext="#{site.footer.created}">Created by EXL.</div>
-				<div th:with="block=#{site.footer.copyright}" th:utext="${#strings.replace(block, '%date%', #dates.year(#dates.createNow()))}">(c) 2020</div>
+				<div th:with="block=#{site.footer.copyright}" th:utext="${#strings.replace(block, '%date%', #dates.year(#dates.createNow()))}">(c) 2015-2020</div>
 			</div>
 		</div>
 	</body>
