--- a/src/main/resources/static/style/motofan.css
+++ b/src/main/resources/static/style/motofan.css
@@ -249,6 +249,10 @@ input, textarea, select {
 .member-administrator {
 	color: red;
 }
+#error {
+	font-size: 12px;
+	color: #222;
+}
 
 /* Footer */
 .copyright {
