Fix locale in html tag
Drop lang attribute from model

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en" th:lang="${lang}">
+<html xmlns:th="http://www.thymeleaf.org" lang="en" th:lang="${#locale}">
 	<head>
 		<title th:text="${title}">Digest Service</title>
 		<meta charset="UTF-8"/>
