Add some info report generator

--- a/src/main/resources/static/style/motofan.css
+++ b/src/main/resources/static/style/motofan.css
@@ -265,4 +265,8 @@ input, textarea, select {
 }
 .copyright a {
 	text-decoration: none;
+	color: maroon;
+}
+.copyright a:hover {
+	color: #FF6600;
 }
