--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en" th:lang="${#locale}">
-	<head>
-		<title th:text="${title}">Digest Service</title>
-		<meta charset="UTF-8"/>
-		<link rel="apple-touch-icon" sizes="180x180" href="../static/icon/apple-touch-icon.png" th:href="@{/icon/apple-touch-icon.png}">
-		<link rel="icon" type="image/png" sizes="32x32" href="../static/icon/favicon-32x32.png" th:href="@{/icon/favicon-32x32.png}">
-		<link rel="icon" type="image/png" sizes="16x16" href="../static/icon/favicon-16x16.png" th:href="@{/icon/favicon-16x16.png}">
-		<link rel="stylesheet" type="text/css" href="../static/style/motofan.css" th:href="@{/style/motofan.css}"/>
-	</head>
+	<head th:replace="~{head ::data(${title})}"><title>Digest Service</title></head>
 	<body>
 		<div class="page">
 			<div th:replace="~{header :: banner}">Header</div>
