--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -6,9 +6,8 @@
 			<div th:fragment="copyright" class="copyright">
 				<div>
 					<span th:utext="#{site.footer.language}">Language: Russian | English.</span>
-					<span th:utext="#{site.footer.report}">System Report.</span>
-					<span th:utext="#{site.footer.help}">Help.</span>
-					<span th:if="${time != null}" th:with="ms=${T(java.lang.System).currentTimeMillis() - time},render=#{site.footer.render}" th:text="${#strings.replace(render, '%time%', ms)}">Generation time: 100ms.</span>
+					<span th:utext="#{site.footer.link}">Links: Link, Link, Link.</span>
+					<span th:if="${time != null}" th:with="ms=${T(java.lang.System).currentTimeMillis() - time},render=#{site.footer.render}" th:text="${#strings.replace(render, '%time%', ms)}">Render: 100ms.</span>
 				</div>
 				<div>
 					<span th:utext="#{site.footer.created}">Created by EXL.</span>
