--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,9 @@
 			<div th:if="${posts != null}">
 				<div th:replace="~{content :: digest}">Content</div>
 			</div>
+			<div th:if="${users != null}">
+				<div th:replace="~{user :: members}">Users</div>
+			</div>
 			<div th:if="${posts != null && !posts.digests.isEmpty()}" class="controls">
 				<div th:replace="~{pager :: paginator(down)}">Pager</div>
 				<div th:replace="~{search :: search-form(down)}">Search</div>
