--- a/src/main/resources/static/style/motofan.css
+++ b/src/main/resources/static/style/motofan.css
@@ -253,6 +253,29 @@ input, textarea, select {
 	font-size: 12px;
 	color: #222;
 }
+.users {
+	width: 100%;
+	border-spacing: 1px;
+}
+.user-header-40, .user-header-15 {
+	background: white;
+	border-bottom: 1px solid #FF822F;
+	color: #C00101;
+	font-size: 10px;
+	letter-spacing: 1px;
+	padding: 5px;
+}
+.user-header-40 {
+	width: 40%;
+}
+.user-header-15 {
+	width: 15%;
+}
+.user-cell, .user-avatar {
+	background: #FFEFD4;
+	padding: 5px;
+	text-align: center;
+}
 
 /* Footer */
 .copyright {
