--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,9 @@
 			<div th:if="${users != null}">
 				<div th:replace="~{user :: members}">Users</div>
 			</div>
+			<div th:if="${help != null}">
+				<div th:replace="~{help :: assist}">Help</div>
+			</div>
 			<div th:if="${posts != null && !posts.digests.isEmpty()}" class="controls">
 				<div th:replace="~{pager :: paginator(down)}">Pager</div>
 				<div th:replace="~{search :: search-form(down)}">Search</div>
